test/pos/adt_partial.smt2_
; Uninterpreted Sorts
(declare-sort Vec 1)


; Uninterpreted Functions


; Qualifiers


; Well-formedness constraints


; Horn constraints
(constraint (forall ((x Vec)(y Vec)(v1 Int)) (=> (and True (and True (= x y))) (= y x))))
